Comportamiento de ventanas

--- a/gui/listas/listaProveedores.ui
+++ b/gui/listas/listaProveedores.ui
@@ -27,7 +27,10 @@
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true"/>
+        <string notr="true">#groupBox_2{
+background-color:#37760D;
+color: #FFFFFF;
+}</string>
        </property>
        <property name="title">
         <string/>
@@ -108,7 +111,9 @@
            </font>
           </property>
           <property name="styleSheet">
-           <string notr="true"/>
+           <string notr="true">#label_2{
+color: #FFFFFF;
+}</string>
           </property>
           <property name="text">
            <string>Buscar por:</string>
@@ -210,6 +215,12 @@
               <bold>true</bold>
              </font>
             </property>
+            <property name="styleSheet">
+             <string notr="true">#label_5{
+background-color:#37760D;
+color: #FFFFFF;
+}</string>
+            </property>
             <property name="text">
              <string>Detalles:</string>
             </property>
@@ -292,6 +303,12 @@
               <bold>true</bold>
              </font>
             </property>
+            <property name="styleSheet">
+             <string notr="true">#label_4{
+background-color:#37760D;
+color: #FFFFFF;
+}</string>
+            </property>
             <property name="text">
              <string>Nombre</string>
             </property>
@@ -306,6 +323,12 @@
               <weight>75</weight>
               <bold>true</bold>
              </font>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">#label_3{
+background-color:#37760D;
+color: #FFFFFF;
+}</string>
             </property>
             <property name="text">
              <string>Codigo:</string>
