--- a/gui/detalles/detalleAfiliados.ui
+++ b/gui/detalles/detalleAfiliados.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>944</width>
-    <height>583</height>
+    <width>1070</width>
+    <height>585</height>
    </rect>
   </property>
   <property name="palette">
@@ -867,7 +867,7 @@ color: #000000;
       <string notr="true"/>
      </property>
      <property name="currentIndex">
-      <number>3</number>
+      <number>0</number>
      </property>
      <property name="iconSize">
       <size>
@@ -893,7 +893,7 @@ color: #000000;
      <widget class="QWidget" name="tab">
       <attribute name="icon">
        <iconset>
-        <normaloff>../iconos/users.ico</normaloff>../iconos/users.ico</iconset>
+        <normaloff>../iconos/user.ico</normaloff>../iconos/user.ico</iconset>
       </attribute>
       <attribute name="title">
        <string>DATOS DEL AFILIADO</string>
@@ -2471,10 +2471,10 @@ background-color:#37861D;
      <widget class="QWidget" name="tab_5">
       <attribute name="icon">
        <iconset>
-        <normaloff>../iconos/Folder.ico</normaloff>../iconos/Folder.ico</iconset>
+        <normaloff>../iconos/users.ico</normaloff>../iconos/users.ico</iconset>
       </attribute>
       <attribute name="title">
-       <string>DATOS ADICIONALES</string>
+       <string>GRUPO FAMILIAR</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_5">
        <item row="2" column="0">
